fixed width for images on small screens

--- a/app/assets/stylesheets/_feed.scss
+++ b/app/assets/stylesheets/_feed.scss
@@ -110,7 +110,7 @@
     margin-bottom: 1em;
   }
   img {
-    max-width: 664px;
+    max-width: 100%;
     max-height: 400px;
   }
 }
